--- a/challenge.html
+++ b/challenge.html
@@ -34,6 +34,7 @@
         position: absolute;
         top: -50px;
         width: 100%;
+        height: 500px;
         color: green;
         text-align: center;
         font-size: 500px;
@@ -43,6 +44,7 @@
         position: absolute;
         top: -50px;
         width: 100%;
+        height: 500px;
         color: red;
         text-align: center;
         font-size: 500px;
